--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <h1 class="text-center">Ganesh</h1>
         <h2 class="text-center">Remover of Obstacles</h2>
         <h3 class="text-center">Son of Shiva and Parvati</h3>
-        <img src="http://www.askganesha.com/images/ask-ganesha.jpg" alt="" class="ganesha-image img-responsive">
+        <img src="https://assets.askganesha.com/images/ganesha.jpg" alt="" class="ganesha-image img-responsive">
     </div>
+
+    
 </body>
 </html>
