--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         <li>Shiva, after reviving his son decreed that ever more Ganesh would preceed all others in acts of devotion by his followers.</li>
     </ul>
 
-    
+    <div class="container">
+        <div class="buttons">
+            <a href=""></a>
+        </div>
+    </div>
 </body>
 </html>
