--- a/index.html
+++ b/index.html
@@ -33,12 +33,16 @@
         <li>Shiva, after reviving his son decreed that ever more Ganesh would preceed all others in acts of devotion by his followers.</li>
     </ul>
 
+    <!-- first image -->
     <div class="container">
         <div class="buttons">
             <a href="https://www.youtube.com/embed/hhfZ04NcnpE">
                 <img src="https://4.bp.blogspot.com/-uFQdkOBc9a8/UDzKnocvrPI/AAAAAAAAAI0/xigzTJCZPec/s1600/Homa-Ganesha.jpg">
             </a>
+            <text>Watch a Ganesh Puja</text>
         </div>
+
+        <!-- second imgae -->
     </div>
 </body>
 </html>
