--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             <text>Watch a Ganesh Puja</text>
         </div>
 
-        <!-- second imgae -->
+        <!-- second image-->
+        
     </div>
 </body>
 </html>
