--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
 
         <!-- second image-->
         <div class="buttons">
-            <a href="https://www.youtube.com/embed/hhfZ04NcnpE">
-
+            <a href="https://www.youtube.com/embed/yXv_FviFiBg">
+                <img src="https://4.bp.blogspot.com/-uFQdkOBc9a8/UDzKnocvrPI/AAAAAAAAAI0/xigzTJCZPec/s1600/Homa-Ganesha.jpg" alt="">
             </a>
+            <text>More Facts about Ganesh</text>
         </div>
     </div>
 </body>
