--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
             </a>
             <text>More Facts about Ganesh</text>
         </div>
+
+        <!-- third image -->
+        <div class="buttons">
+            <a href="https://www.youtube.com/embed/Os5ObuWjoOE">
+                <img src="https://4.bp.blogspot.com/-uFQdkOBc9a8/UDzKnocvrPI/AAAAAAAAAI0/xigzTJCZPec/s1600/Homa-Ganesha.jpg" alt="">
+            </a>
+            <text>Have a Puja performed for you</text>
+        </div>
     </div>
 </body>
 </html>
