--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a href="https://www.youtube.com/embed/hhfZ04NcnpE">
                 <img src="https://4.bp.blogspot.com/-uFQdkOBc9a8/UDzKnocvrPI/AAAAAAAAAI0/xigzTJCZPec/s1600/Homa-Ganesha.jpg">
             </a>
-            <text>Watch a Ganesh Puja</text>
+            <span>Watch a Ganesh Puja</span>
         </div>
 
         <!-- second image-->
@@ -47,7 +47,7 @@
             <a href="https://www.youtube.com/embed/yXv_FviFiBg">
                 <img src="https://4.bp.blogspot.com/-uFQdkOBc9a8/UDzKnocvrPI/AAAAAAAAAI0/xigzTJCZPec/s1600/Homa-Ganesha.jpg" alt="">
             </a>
-            <text>More Facts about Ganesh</text>
+            <span>More Facts about Ganesh</span>
         </div>
 
         <!-- third image -->
@@ -55,7 +55,7 @@
             <a href="https://www.youtube.com/embed/Os5ObuWjoOE">
                 <img src="https://4.bp.blogspot.com/-uFQdkOBc9a8/UDzKnocvrPI/AAAAAAAAAI0/xigzTJCZPec/s1600/Homa-Ganesha.jpg" alt="">
             </a>
-            <text>Have a Puja performed for you</text>
+            <span>Have a Puja performed for you</span>
         </div>
     </div>
 </body>
