--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <a href="https://www.youtube.com/embed/Os5ObuWjoOE">
                 <img src="https://4.bp.blogspot.com/-uFQdkOBc9a8/UDzKnocvrPI/AAAAAAAAAI0/xigzTJCZPec/s1600/Homa-Ganesha.jpg" alt="">
             </a>
-            
-        </div><span>Have a Puja performed for you</span>
+            <span>Have a Puja performed for you</span>
+        </div>
     </div>
 </body>
 </html>
